# matrix

./: .gitignore  CMakeLists.txt  README.md  matrix.cpp  matrix.hpp  matrix_exception.hpp  matrix_fwd.hpp  matrix_strategy.hpp  matrix_traits.hpp
test/: main.cpp  matrix.cpp  matrix_env.hpp
